added buttons and misc details

--- a/src/components/products/products.scss
+++ b/src/components/products/products.scss
@@ -6,4 +6,39 @@
             background-color: lightgreen;
         }
     }
+
+    .product-details {
+        .product-price {
+            font-size: 3.5em;
+        font-weight: bold;
+        }
+        .carousel {
+            .indicators {
+            background-color: darkgray;
+            }
+        }
+        .add-to-cart {
+            font-size: 2em;
+
+            .qty-container {
+                margin: 0 30px;
+
+                button {
+                    margin: 0 12px;
+                }
+
+                .product-qty {
+                    padding: 5px 15px;
+                    position: relative;
+                    top: 5px;
+                    background-color: #efefef;
+                }
+            }
+
+            button {
+                position: relative;
+                top: 2px;
+            }
+        }
+    }
 }
