--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -13,6 +13,11 @@
         width: 80%;
         margin: auto;
         padding: 20px;
-    
+        
+        .ws-modal-actions {
+            button {
+                margin: 8px 14px;
+            }
+        }
     }
 }
